FIX Dataset see all CKAN fields

--- a/ckanext/jsonschema/templates/macros/custom_form.html
+++ b/ckanext/jsonschema/templates/macros/custom_form.html
@@ -25,7 +25,7 @@
             <b>{{_('Error message:')}}</b> {{error.message[0]|safe}}
         {% else %}
           <!-- This will print errors unexpected errors in jsonschema, like exceptions -->
-          {{error|safe}}
+          {{key}} : {{error|safe}}
         {% endif %}
     </li>
     {% endfor %}
