--- a/ckanext/jsonschema/iso19139/templates/iso/description.html
+++ b/ckanext/jsonschema/iso19139/templates/iso/description.html
@@ -1,4 +1,3 @@
-{% set resources = dataset.resources %}
 {% set body = h.jsonschema_get_package_body(dataset) %}
 
 {% set dataIdentification = body['dataIdentification'] %}
@@ -27,36 +26,41 @@
 {{ dataIdentification.citation.otherCitationDetails }}
 {% endif %}
 
+{% set resources = dataset['resources'] %}
+{% if resources %}
+	{% if resources|length %}
 **Contact points:**
-{% for resource in resources %}
-	{% set resource_type = h.jsonschema_get_resource_type(resource) %}
-	{% set resource_body = h.jsonschema_get_resource_body(resource) %}
-	{% set _label = resource_type %}
-	{% if resource_type == 'resource-contact' %}
-	  {% set _label = 'Contact' %}
-	{% elif resource_type == 'graphic-overview' %}
-		{% set _label = 'Graphic overview' %}
-	{% elif resource_type == 'online-resource' %}
-	  {% set _label = 'Online resource' %}
-	{% elif resource_type == 'resource-maintainer' %}
-	  {% set _label = 'Maintainer' %}
-	{% elif resource_type == 'distributor' %}
-	  {% set _label = 'Distributor' %}
-	{% elif resource_type == 'metadata-contact' %}
-	  {% set _label = 'Metadata contact' %}
-	{% elif resource_type == 'cited-responsible-party' %}
-	  {% set _label = 'Cited contact' %}
+		{% for resource in resources %}
+			{% set resource_type = h.jsonschema_get_resource_type(resource) %}
+			{% set resource_body = h.jsonschema_get_resource_body(resource) %}
+			{% set _label = resource_type %}
+			{% if resource_type == 'resource-contact' %}
+			{% set _label = 'Contact' %}
+			{% elif resource_type == 'graphic-overview' %}
+				{% set _label = 'Graphic overview' %}
+			{% elif resource_type == 'online-resource' %}
+			{% set _label = 'Online resource' %}
+			{% elif resource_type == 'resource-maintainer' %}
+			{% set _label = 'Maintainer' %}
+			{% elif resource_type == 'distributor' %}
+			{% set _label = 'Distributor' %}
+			{% elif resource_type == 'metadata-contact' %}
+			{% set _label = 'Metadata contact' %}
+			{% elif resource_type == 'cited-responsible-party' %}
+			{% set _label = 'Cited contact' %}
+			{% endif %}
+			{% if resource_body and resource_body.contactInfo %}
+				{% if resource_body.contactInfo.address
+					and resource_body.contactInfo.address.electronicMailAddress %}
+					{% set info_name = resource_body.individualName or resource_body.organisationName %}
+		{{_label}}: [{{info_name}}](mailto:{{resource_body.contactInfo.address.electronicMailAddress}})
+				{% else %}
+		{{_label}}: {{resource_body.individualName}} {{resource_body.organisationName}}
+				{% endif %}
+			{% endif %}
+		{% endfor %}
 	{% endif %}
-	{% if resource_body and resource_body.contactInfo %}
-		{% if resource_body.contactInfo.address
-			and resource_body.contactInfo.address.electronicMailAddress %}
-			{% set info_name = resource_body.individualName or resource_body.organisationName %}
-{{_label}}: [{{info_name}}](mailto:{{resource_body.contactInfo.address.electronicMailAddress}})
-		{% else %}
-{{_label}}: {{resource_body.individualName}} {{resource_body.organisationName}}
-		{% endif %}
-	{% endif %}
-{% endfor %}
+{% endif %}
 
 {% set dataQualityInfo = body['dataQualityInfo'] %}
 {% if dataQualityInfo and
@@ -90,19 +94,21 @@
 {% endif %}
 
 {% if resources %}
+	{% if resources|length %}
 **Online resources:**
-
-	{% for resource in resources %}
-		{% set resource_type = h.jsonschema_get_resource_type(resource) %}
-		{% if resource_type == 'online-resource' %}
-			{% set resource_body = h.jsonschema_get_resource_body(resource) %}
-			{% if resource_body.protocol %}
-				{% if resource_body.protocol.lower() == 'www:link-1.0-http--link' %}
+		{% for resource in resources %}
+			{% set resource_type = h.jsonschema_get_resource_type(resource) %}
+			{% if resource_type == 'online-resource' %}
+				{% set resource_body = h.jsonschema_get_resource_body(resource) %}
+				{% if resource_body.protocol %}
+					{% if resource_body.protocol.lower() == 'www:link-1.0-http--link' %}
 [{{resource.description or resource.name}}]({{resource.url}})
-				{% elif resource_body.protocol.lower() == 'www:download-1.0-http--download' %}
+					{% elif resource_body.protocol.lower() == 'www:download-1.0-http--download' %}
 [{{resource.description or resource.name}}]({{resource.url}})
+					{% endif %}
 				{% endif %}
 			{% endif %}
-		{% endif %}
-	{% endfor %}
+		{% endfor %}
+	{% endif %}
 {% endif %}
+
