--- a/ckanext/jsonschema/templates/snippets/jsonschema_form.html
+++ b/ckanext/jsonschema/templates/snippets/jsonschema_form.html
@@ -92,7 +92,10 @@
     </p>
     <!-- <p style="border: 2px solid gray;" id="editor-jsonschema-config"> -->
     <div id="editor-jsonschema-config">
-        {% resource 'jsonschema_editor/main' %}
+        
+        {% asset 'ckanext-jsonschema/main-css' %}
+        {% asset 'ckanext-jsonschema/main-js' %}
+        
     </div>
     <p>
         <div style="border-bottom: 1px solid gray;">
